[package]
name = "inflight-set"
version = "0.1.1"
edition = "2024"
description = "Acquire many distinct RAII guards keyed by name, allowing only one in-flight guard per key."
license = "MIT"
repository = "https://github.com/jdockerty/inflight-set"
readme = "README.md"
keywords = ["concurrency", "mutex", "guard", "keyed", "inflight"]
categories = ["concurrency"]

[dependencies]
parking_lot = "0.12.5"
thiserror = "2.0.18"
